@@ -1,5 +1,5 @@
 /**
-    Copyright 2001-2019 Red Anchor Trading Co. Ltd.
+    Copyright 2001-2020 Red Anchor Trading Co. Ltd.
 
     Distributed under the Boost Software License, Version 1.0.
     See <http://www.boost.org/LICENSE_1_0.txt>
@@ -11,6 +11,7 @@
 
 #include <fost/core>
 #include <fost/exception/null.hpp>
+#include <fost/pointers.shared.hpp>
 
 
 namespace fostlib {
